[workspace]
members = [
    "proxy",
    "meme",
    "swap",
    "pool",
    "blob-gateway",
    "ams",
    "abi",
    "deposit",
]
exclude = [
    "webui/wasm",
]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
# We have to use respeer fork for application creator chain id in service
# linera-sdk = { version = "0.15.5" }
# linera-views = { version = "0.15.5", default-features = false }
linera-sdk = { git = "https://github.com/respeer-ai/linera-protocol.git", rev = "8725e653" }
linera-views = { git = "https://github.com/respeer-ai/linera-protocol.git", rev = "8725e653" }
futures = { version = "0.3.24" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
assert_matches = "1.5.0"
thiserror = "1.0.65"
log = "0.4.20"
env_logger = "0.9"
primitive-types = { version = "^0.13.1", features = ["serde"] }
rust_decimal = { version = "1.36", default-features = false, features = [ "serde-str", "std" ] }
getrandom = { version = "0.2.12", default-features = false, features = [ "custom" ] }
anyhow = "1.0.80"
bcs = "0.1.3"

abi = { path = "./abi" }
meme = { path = "./meme" }
proxy = { path = "./proxy" }
swap = { path = "./swap" }
pool = { path = "./pool" }
blob-gateway = { path = "./blob-gateway" }
ams = { path = "./ams" }
deposit = { path = "./deposit" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
