[workspace]
members = [
    "proxy",
    "meme",
    "swap",
    "pool",
    "blob-gateway",
    "ams",
    "abi",
    "base",
    "runtime",
]
exclude = [
    "webui/wasm",
    "webui-v2/wasm",
    "service/miner",
]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }
async-graphql-parser = { version = "=7.0.17", default-features = false }
async-trait = "0.1.77"
# We have to use respeer fork for application creator chain id in service
linera-sdk = { version = "0.15.8" }
linera-views = { version = "0.15.8", default-features = false }
# linera-sdk = { git = "https://github.com/respeer-ai/linera-protocol.git", rev = "a8a3407b" }
# linera-views = { git = "https://github.com/respeer-ai/linera-protocol.git", rev = "a8a3407b" }
futures = { version = "0.3.24" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
assert_matches = "1.5.0"
thiserror = "1.0.65"
log = "0.4.20"
env_logger = "0.9"
primitive-types = { version = "^0.13.1", features = ["serde"] }
rust_decimal = { version = "1.36", default-features = false, features = [ "serde-str", "std" ] }
getrandom = { version = "0.2.12", default-features = false, features = [ "custom" ] }
anyhow = "1.0.80"
bcs = "0.1.3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
num-bigint = "0.4"
num-traits = "0.2"
time = "=0.3.41"
time-core = "=0.1.4"

abi = { path = "./abi" }
meme = { path = "./meme" }
proxy = { path = "./proxy" }
swap = { path = "./swap" }
pool = { path = "./pool" }
blob-gateway = { path = "./blob-gateway" }
ams = { path = "./ams" }
deposit = { path = "./deposit" }
base = { path = "./base" }
runtime = { path = "./runtime" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

## Path to support method https://github.com/respeer-ai/linera-protocol/blob/8ef28c971e4d43f5fb7790991ab763b5c7103696/linera-sdk/src/test/chain.rs#L322
## In the unit test we need to get the block for the created chain ID
[patch.crates-io.linera-sdk]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "a8a3407b"
