[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
async-graphql-parser.workspace = true
async-graphql-value.workspace = true
linera-sdk.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
env_logger.workspace = true
primitive-types.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
getrandom.workspace = true
base.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

