[package]
name = "meme"
version = "0.1.0"
authors = ["ResPeer <contact@respeer.ai>"]
edition = "2021"

[dependencies]
async-graphql.workspace = true
futures.workspace = true
linera-sdk.workspace = true
serde_json.workspace = true
serde.workspace = true
abi.workspace = true
thiserror.workspace = true
log.workspace = true
proxy.workspace = true
env_logger.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
assert_matches.workspace = true
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "meme_contract"
path = "src/contract.rs"

[[bin]]
name = "meme_service"
path = "src/service.rs"
