[package]
name = "state"
version = "0.1.0"
authors = ["ResPeer <contact@respeer.ai>"]
edition = "2021"

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
linera-sdk.workspace = true
abi.workspace = true
bcs.workspace = true
thiserror.workspace = true
serde.workspace = true
log.workspace = true
getrandom.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
assert_matches.workspace = true
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "state_contract"
path = "src/contract.rs"

[[bin]]
name = "state_service"
path = "src/service.rs"
