[package]
name = "linera-meme-miner"
description = "Linera meme miner."
readme = "README.md"
documentation = "https://docs.rs/linera-meme-miner/latest/linera_meme_miner/"
version = "0.1.0"
authors = ["ResPeer <contact@respeer.ai>"]
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }
async-graphql-parser = { version = "=7.0.17", default-features = false }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "=0.4.50"
wasm-bindgen-test = "0.3.42"
wasm-instrument = { package = "linera-wasm-instrument", version = "0.4.0-linera.1" }
wasmer = { package = "linera-wasmer", version = "4.4.0-linera.7", default-features = false }
wasmer-compiler-singlepass = { package = "linera-wasmer-compiler-singlepass", version = "4.4.0-linera.7", default-features = false, features = [
    "std",
    "unwind",
    "avx",
] }
wasmtime = { version = "25.0.0", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde-command-opts = "0.1.1"
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.14"
serde_json = "1.0.114"
serde_with = { version = "3", default-features = false, features = [
    "alloc",
    "macros",
] }
serde_yaml = "0.9.34"
sha3 = "0.10.8"
thiserror = "1.0.65"
tokio = "1.36.0"
tokio-stream = "0.1.14"
tokio-test = "0.4.3"
tokio-util = "0.7.10"
futures = "0.3.30"
tracing = { version = "0.1.40", features = ["release_max_level_trace"] }

[dependencies.linera-core]
version = "0.15.8"
features = ["web", "wasmer"]

[dependencies.linera-client]
version = "0.15.8"
default-features = false
features = ["web"]

[dependencies.linera-base]
version = "0.15.8"
features = ["web"]

[dependencies.linera-execution]
version = "0.15.8"
features = ["web", "wasmer"]

[dependencies.abi]
path = "../../abi"

[profile.dev.package.linera-wasmer]
opt-level = 3

[profile.dev.package.wasmtime]
opt-level = 3

[workspace.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 1
