[package]
name = "linera-meme-miner"
description = "Linera meme miner."
readme = "README.md"
documentation = "https://docs.rs/linera-meme-miner/latest/linera_meme_miner/"
version = "0.1.0"
authors = ["ResPeer <contact@respeer.ai>"]
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }
async-graphql-parser = { version = "=7.0.17", default-features = false }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "=0.4.50"
wasm-bindgen-test = "0.3.42"
wasm-instrument = { package = "linera-wasm-instrument", version = "0.4.0-linera.1" }
wasmer = { package = "linera-wasmer", version = "4.4.0-linera.7", default-features = false }
wasmer-compiler-singlepass = { package = "linera-wasmer-compiler-singlepass", version = "4.4.0-linera.7", default-features = false, features = [
    "std",
    "unwind",
    "avx",
] }
wasmtime = { version = "25.0.0", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde-command-opts = "0.1.1"
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.14"
serde_json = "1.0.114"
serde_with = { version = "3", default-features = false, features = [
    "alloc",
    "macros",
] }
serde_yaml = "0.9.34"
sha3 = "0.10.8"
thiserror = "1.0.65"
tokio = "1.36.0"
tokio-stream = "0.1.14"
tokio-test = "0.4.3"
tokio-util = "0.7.10"
futures = "0.3.30"
tracing = { version = "0.1.40", features = ["release_max_level_trace"] }
fs-err = "2.11.0"
async-trait = "0.1.77"
chrono = { version = "0.4.35", default-features = false }
clap = { version = "4", features = ["cargo", "derive", "env"] }
clap-markdown = "0.1.3"
clap_complete = "4"
colored = "2.1.0"
tempfile = "3.20.0"
cfg-if = "1.0.0"
dirs = "5.0.1"
tikv-jemallocator = { version = "0.6.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
], optional = true }
prometheus = { version = "0.13.3", optional = true }
tabled = "0.20.0"

[build-dependencies]
cfg_aliases = "0.2.1"

[dependencies.linera-core]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"
features = ["wasmer"]

[dependencies.linera-client]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"
default-features = false

[dependencies.linera-base]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"

[dependencies.linera-service]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"

[dependencies.linera-persistent]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"

[dependencies.linera-rpc]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"

[dependencies.linera-execution]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"
features = ["wasmer"]

[dependencies.linera-views]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"
features = ["indexeddb"]

[dependencies.linera-storage-service]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"
optional = true

[dependencies.linera-storage]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"
features = ["wasmer"]

[dependencies.linera-metrics]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
# version = "0.15.10"
optional = true

[dependencies.abi]
path = "../../abi"

[profile.release]
lto = "thin"
debug = true

[profile.dev.package.linera-wasmer]
opt-level = 3

[profile.dev.package.wasmtime]
opt-level = 3

[workspace.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 1

[[bin]]
name = "miner"
path = "src/main.rs"

[features]
default = ["wasmer", "rocksdb", "storage-service"]
rocksdb = ["linera-views/rocksdb", "linera-core/rocksdb"]
wasmer = [
    "linera-client/wasmer",
    "linera-execution/wasmer",
    "linera-storage/wasmer",
]
storage-service = ["linera-storage-service"]
metrics = [
    "prometheus",
    "linera-base/metrics",
    "linera-client/metrics",
    "linera-metrics",
]
jemalloc = ["tikv-jemallocator"]
memory-profiling = [
    "metrics",
    "jemalloc",
    "tikv-jemallocator/profiling",
    "linera-metrics/memory-profiling",
]

[patch.crates-io.linera-sdk]
git = "https://github.com/respeer-ai/linera-protocol.git"
rev = "c21bc649"
